--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     align-items: center;
     justify-content: center;
     position:relative;
-    background:url(../images/about/welcome-banner.jpg)no-repeat;
+    background:url(../images/my/4.jpg)no-repeat;
     background-size:cover;
     background-position: center;
     height:890px;
@@ -270,14 +270,18 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
 .single-about-add-info p {font-weight:  300;border:  0;padding: 0;margin-top: 3px;}
 /*.single-about-txt*/
 
+/* .single-about-txt .row div:nth-child(2){
+
+} */
+
 /*.single-about-img */
-.single-about-img{position: relative;box-shadow: 0 5px 20px rgba(14,25,80,.30);}
+.single-about-img{position: relative;box-shadow: 0 5px 20px rgba(14,25,80,.30);left:80px;width:352px}
 .single-about-img:before {
     position:  absolute;
     content: " ";
     top: 0;
     left:  0;
-    width: 109%;
+    width: 100%;
     height:  100%;
     background: rgba(31,44,108,.3);
 }
@@ -286,7 +290,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     height: 468px;
 }
 .about-list-icon{
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     position: absolute;
